Update API for new fields
